change report dialog SEF custom

--- a/iped-app/resources/root/htmlreport/pt-BR/caseinformation.htm
+++ b/iped-app/resources/root/htmlreport/pt-BR/caseinformation.htm
@@ -12,7 +12,16 @@
                     <td valign="middle" class="SmallText3" align="center" colspan="2"><img border="0" src="res/armas.gif" /><br />
                         <b>%HEADER%</b>
 
-                <tr><td valign="top" class="SmallText3" width = "1%"><b>Laudo</b></td><td align="left" valign="middle" class="MainBodyText"><b>%REPORT%</b> de %REPORT_DATE%</td></tr>
+<tr><td valign="top" class="SmallText3" width = "19%"><b>Versão</b></td><td align="left" valign="middle" class="MainBodyText">%VERSAO%</td></tr>
+<tr><td valign="top" class="SmallText3" width = "19%"><b>Relatório Criado</b></td><td align="left" valign="middle" class="MainBodyText">%DATA%</td></tr>
+<tr><td valign="top" class="SmallText3" width = "19%"><b>Nome do Investigador</b></td><td align="left" valign="middle" class="MainBodyText">%REPORT%</td></tr>
+<tr><td valign="top" class="SmallText3" width = "19%"><b>Nome do Caso</b></td><td align="left" valign="middle" class="MainBodyText">%REPORT_DATE%</td></tr>
+<tr><td valign="top" class="SmallText3" width = "19%"><b>Nome da Operação</b></td><td align="left" valign="middle" class="MainBodyText">%TITLE%</td></tr>
+<tr><td valign="top" class="SmallText3" width = "19%"><b>Observações</b></td><td align="left" valign="middle" class="MainBodyText">%EXAMINERS%</td></tr>
+<tr><td valign="top" class="SmallText3" width = "19%"><b>Hash</b></td><td align="left" valign="middle" class="MainBodyText">%INVESTIGATION%</td></tr>
+
+
+<!--                 <tr><td valign="top" class="SmallText3" width = "1%"><b>Laudo</b></td><td align="left" valign="middle" class="MainBodyText"><b>%REPORT%</b> de %REPORT_DATE%</td></tr>
                 <tr><td valign="top" class="SmallText3" width = "1%"><b>Título</b></td><td align="left" valign="middle" class="MainBodyText">%TITLE%</td></tr>
 
                 <tr><td valign="top" class="SmallText3" width = "1%"><b>Signatário(s)</b></td><td align="left" valign="middle" class="MainBodyText">
@@ -31,7 +40,7 @@
                     <td align="left" valign="middle" class="MainBodyText">
                         %EVIDENCE%
                     </td>
-                </tr>
+                </tr> -->
 
                 </tr>
 
