change report style

--- a/iped-app/resources/root/htmlreport/pt-BR/report.htm
+++ b/iped-app/resources/root/htmlreport/pt-BR/report.htm
@@ -4,7 +4,7 @@
         <title>Relat&oacute;rio Forense IPED</title>
         <base target="_self" />
     </head>
-    <frameset cols="200,10%" framespacing="0" border="0" frameborder="0">
+    <frameset cols="250,10%">
         <frame src="relatorio/contents.htm" scrolling="auto" />
         <frame src="relatorio/caseinformation.htm" name="ReportPage" scrolling="auto" />
         <noframes>
